--- a/web-application-front-end/src/components/premierLeagueTables/topAssistsTable/topAssistsTable.css
+++ b/web-application-front-end/src/components/premierLeagueTables/topAssistsTable/topAssistsTable.css
@@ -1,28 +1,27 @@
 .topAssistsTable-container {
-    width: fit-content;
+    width: 700px;
     float: inline-start;
     border-radius: 40px;
-    padding: 15px;
-    margin: -30px -10px;
+    padding: 10px;
     box-shadow: 0 0 10px turquoise;
 }
 
 .topAssistsTable-table {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    width: 100%;
+    width: fit-content;
     font-size: 13px;
     border-collapse: separate;
     border-spacing: 0;
 }
 
 .topAssistsTable-title {
-    display:flex; 
+    display: flex;
     align-items: center;
     justify-content: center;
     padding: 10px;
     padding: 10px;
     text-align: center;
-    font-size: 24px;
+    font-size: 30px;
     font-weight: bold;
     color: #333333be;
 }
@@ -32,7 +31,7 @@
     filter: hue-rotate(650deg);
 }
 
-.topAssistsTable-table th{
+.topAssistsTable-table th {
     padding: 8px;
     text-align: center;
     border: none;
@@ -45,9 +44,11 @@
     border: none;
 }
 
-.topAssistsTable-table th,.topAssistsTable-table th.form{
+.topAssistsTable-table th,
+.topAssistsTable-table th.form {
     background-color: #04f7ff56;
-    color: gray;}
+    color: gray;
+}
 
 .topAssistsTable-table tr {
     border-radius: 10px;
